--- a/HonoluluArt_Tutorial2/HonoluluArt/Base.lproj/Main.storyboard
+++ b/HonoluluArt_Tutorial2/HonoluluArt/Base.lproj/Main.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,10 +21,26 @@
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="DLp-8w-jHa">
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                             </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g5z-j1-gZD">
+                                <rect key="frame" x="29" y="463" width="262" height="69"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="69" id="diW-Cq-EoT"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                <state key="normal" title="Share Artwork"/>
+                                <connections>
+                                    <action selector="shareArtworkButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Fne-vf-RBq"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Hie-Z2-pz4" firstAttribute="bottom" secondItem="DLp-8w-jHa" secondAttribute="bottom" id="3E8-cS-9db"/>
+                            <constraint firstItem="Hie-Z2-pz4" firstAttribute="bottom" secondItem="g5z-j1-gZD" secondAttribute="bottom" constant="36" id="M7S-cS-KsS"/>
+                            <constraint firstItem="g5z-j1-gZD" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iHx-sE-dlM"/>
+                            <constraint firstItem="g5z-j1-gZD" firstAttribute="leading" secondItem="Hie-Z2-pz4" secondAttribute="leading" constant="29" id="iKr-cx-FA9"/>
+                            <constraint firstItem="Hie-Z2-pz4" firstAttribute="trailing" secondItem="g5z-j1-gZD" secondAttribute="trailing" constant="29" id="iUd-cb-vZw"/>
                             <constraint firstItem="Hie-Z2-pz4" firstAttribute="trailing" secondItem="DLp-8w-jHa" secondAttribute="trailing" id="nVl-5x-E12"/>
                             <constraint firstItem="DLp-8w-jHa" firstAttribute="top" secondItem="Hie-Z2-pz4" secondAttribute="top" id="pLZ-9J-Zlw"/>
                             <constraint firstItem="DLp-8w-jHa" firstAttribute="leading" secondItem="Hie-Z2-pz4" secondAttribute="leading" id="zvP-AS-bdb"/>
@@ -32,10 +49,12 @@
                     </view>
                     <connections>
                         <outlet property="mapView" destination="DLp-8w-jHa" id="CuG-iA-PCI"/>
+                        <outlet property="shareArtworkButtonOutlet" destination="g5z-j1-gZD" id="5aL-wT-N1K"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="46.875" y="30.633802816901408"/>
         </scene>
     </scenes>
 </document>
